<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg"
    android:padding="8dp"
    tools:context=".view.main.HomeFragment">

    <ImageView
        android:id="@+id/img_logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_logout_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logout" />

    <TextView
        android:id="@+id/title_page"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/poppins_black"
        android:gravity="center"
        android:text="@string/dashboard"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/img_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_logout" />

    <TextView
        android:id="@+id/tv_halo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/halo"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logout" />

    <View
        android:id="@+id/line_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_halo" />

    <View
        android:id="@+id/line_dividertwo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_laporantotal" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_halo"
        app:layout_constraintTop_toTopOf="@id/tv_halo"
        tools:text=" Admin Banyumas" />

    <TextView
        android:id="@+id/tv_titleLaporanTerima"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/laporan_diterima"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tv_titleLaporanDiproses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_divider" />

    <TextView
        android:id="@+id/tv_titleLaporanDiproses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/laporan_diproses"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_titleLaporanTerima"
        app:layout_constraintTop_toTopOf="@id/tv_titleLaporanTerima" />


    <TextView
        android:id="@+id/tv_laporantotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_black"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/tv_titleLaporanTerima"
        app:layout_constraintStart_toStartOf="@id/tv_titleLaporanTerima"
        app:layout_constraintTop_toBottomOf="@id/tv_titleLaporanTerima"
        tools:text="0" />

    <TextView
        android:id="@+id/tv_laporantotalDiterima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_black"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_titleLaporanDiproses"
        app:layout_constraintStart_toEndOf="@+id/tv_titleLaporanTerima"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleLaporanDiproses"
        tools:text="0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_allReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@color/dark_white"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/cv_accReport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_dividertwo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_all_report"
                android:contentDescription="@string/lihat_laporan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:text="@string/lihat_laporan_diterima" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_accReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv_allReport"
        app:layout_constraintTop_toBottomOf="@id/line_dividertwo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_approve_report"
                android:contentDescription="@string/laporan_diterima_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:text="@string/lihat_laporan_diproses" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>